force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Info_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Info_URL__c</fullName>
    <description>Link to the PMD documentation about the rule violated.</description>
    <label>Info URL</label>
    <type>Url</type>
</CustomField>