force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Severity__c.field-meta.xml
<CustomField>
    <fullName>copado__Severity__c</fullName>
    <description>CodeScan Severity</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>