force-app/main/default/objects/copado__Static_Code_Analysis_Violation__c/fields/copado__Type__c.field-meta.xml
<CustomField>
    <fullName>copado__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Vulnerability</fullName>
            </value>
            <value>
                <fullName>Code Smell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>